# FROctoMap

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
action/: froctomap.action  information.action
data/: demobin.txt  demobin2.txt  demobin4.txt  weekbin.txt
launch/: cloudify.launch  cloudify.launch~  froctomap.launch  froctomap_action.launch  froctomap_action.launch~  octomap_review.launch  read_file.launch
src/: CFrelement.cpp  CFrelement.h  CFremenGrid.cpp  CFremenGrid.h  convert.cpp  frelement_octo.cpp  frelement_read_octo .cpp  frelement_test.cpp  fremen.cpp  fremen_leeds.cpp  froctomap.cpp  froctomap.cpp~  froctomap_ActionClient.cpp  froctomap_ActionClient.cpp~  froctomap_ActionServer.cpp  froctomap_ActionServer.cpp~  froctomap_gain.cpp  froctomap_util.cpp  information_gain.cpp  octomap_client.cpp  octomap_markers.cpp  publish_data.cpp  save_client.cpp  transform.bak  transform.cpp  transform.heime  update_client.cpp
srv/: EstimateOctomap.srv  RecoverOctomap.srv  RetrieveOctomap.srv  SaveGrid.srv  UpdateGrid.srv
